--- a/source/styles.css
+++ b/source/styles.css
@@ -1,35 +1,54 @@
-/* The body is everything displayed in the main text delivery area
+/* The body is everything displayed in the main text delivery area */
 body {
-	background: blue;
+	background: #FCF5E5;
+	color: #000000;
+	font-family: "Times New Roman", Times, Georgia, serif;
 }
-*/
 
-/* This class is specific to the text in the passages
+
+/* This class is specific to the text in the passages */
 .passage {
-    border: 1px solid red;
+    border: 1px solid black;
 }
-*/
 
-/* This id is specific to the sidebar
+/* Hyperlink css */
+.passage a {
+	color: #B71C1C;
+	cursor: pointer;
+}
+
+
+/* hover effect */
+.passage a:hover {
+	border: 1px groove #B71C1C;
+}	
+
+
+/* visited effect */
+.passage a:visited {
+	color: purple;
+}	
+
+
+/* This id is specific to the sidebar */
 #ui-bar {
 	display: none;
 }
-*/
 
-/* This id is specific to the header
+
+/* This id is specific to the header */
 #header {
-	
+	color: black;
 }
-*/
 
-/* This id is specific to the footer
+
+/* This id is specific to the footer */
 #footer {
-	
+	color: black;
 }
-*/
 
-/* This class will override any styles on passages tagged "forest"
+
+/* This class will override any styles on passages tagged "forest" */
 .forest {
 	background: green;
 }
-*/
